# downloader

./: .gitignore  Cargo.toml  README.md  cspell.json  flake.nix
examples/: download.rs  tui_basic.rs
src/: backend.rs  download.rs  downloader.rs  http_client.rs  lib.rs  progress.rs
